# Talk2Database

./: .gitignore  Dockerfile  README.md  docker-compose.yml  employee.db  experiment3.ipynb  pyproject.toml  requirements.txt  setup.py  sql_agent_with_langgraph.ipynb  start.sh  users.db
.github/workflows/: deploy.yml
app/: logging_config.py  main.py  requirements.txt  revise_code.md
app/agents/: sql_agent.py  sql_agent_v2.py
app/api/v1/: auth.py
app/api/v1/endpoints/: database_connection.py  history.py  schema.py  sql_query.py
app/core/: config.py
app/frontend/: Talk2SQL.py  frontend_app.py  users.db
app/models/: __init__.py
app/schemas/: agent_state.py
app/services/: sql_agent.py  sql_agent_instance.py  sql_agent_old.py  sql_agent_visualizer_version.py
app/tools/: database_tools.py  database_tools_v2.py
app/utils/: database_connection.py
notebooks/: experiment3.ipynb  sql_agent_version2.ipynb  sql_agent_with_langgraph.ipynb  visualization_experiments.ipynb
